// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test artwork queries should find an artwork by id 1`] = `
Object {
  "data": Object {
    "findArtwork": Object {
      "Artwork": Object {
        "title": "amazingsongT1itle",
      },
      "ArtworkNotFound": null,
      "ClientError": null,
      "UserArgumentsConflict": null,
      "UserUnauthorized": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should not find an artwork by id and throw an error 1`] = `
Object {
  "data": Object {
    "findArtwork": Object {
      "Artwork": null,
      "ArtworkNotFound": Object {
        "message": "Couldn't find artwork",
      },
      "ClientError": null,
      "UserArgumentsConflict": null,
      "UserUnauthorized": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query both auctions and fixed 1`] = `
Object {
  "data": Object {
    "listArtworks": Array [
      Object {
        "Artwork": Object {
          "handle": "4",
          "saleType": "fixed",
        },
        "ArtworkNotFound": null,
        "ClientError": null,
        "UserArgumentsConflict": null,
        "UserUnauthorized": null,
      },
      Object {
        "Artwork": Object {
          "handle": "5",
          "saleType": "fixed",
        },
        "ArtworkNotFound": null,
        "ClientError": null,
        "UserArgumentsConflict": null,
        "UserUnauthorized": null,
      },
      Object {
        "Artwork": Object {
          "handle": "art 1",
          "saleType": "auction",
        },
        "ArtworkNotFound": null,
        "ClientError": null,
        "UserArgumentsConflict": null,
        "UserUnauthorized": null,
      },
      Object {
        "Artwork": Object {
          "handle": "1",
          "saleType": "auction",
        },
        "ArtworkNotFound": null,
        "ClientError": null,
        "UserArgumentsConflict": null,
        "UserUnauthorized": null,
      },
      Object {
        "Artwork": Object {
          "handle": "2",
          "saleType": "auction",
        },
        "ArtworkNotFound": null,
        "ClientError": null,
        "UserArgumentsConflict": null,
        "UserUnauthorized": null,
      },
      Object {
        "Artwork": Object {
          "handle": "3",
          "saleType": "auction",
        },
        "ArtworkNotFound": null,
        "ClientError": null,
        "UserArgumentsConflict": null,
        "UserUnauthorized": null,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query only auctions  1`] = `
Object {
  "data": Object {
    "listArtworks": Array [
      Object {
        "Artwork": Object {
          "handle": "3",
          "saleType": "auction",
        },
        "ArtworkNotFound": null,
        "ClientError": null,
        "UserArgumentsConflict": null,
        "UserUnauthorized": null,
      },
      Object {
        "Artwork": Object {
          "handle": "2",
          "saleType": "auction",
        },
        "ArtworkNotFound": null,
        "ClientError": null,
        "UserArgumentsConflict": null,
        "UserUnauthorized": null,
      },
      Object {
        "Artwork": Object {
          "handle": "1",
          "saleType": "auction",
        },
        "ArtworkNotFound": null,
        "ClientError": null,
        "UserArgumentsConflict": null,
        "UserUnauthorized": null,
      },
      Object {
        "Artwork": Object {
          "handle": "art 1",
          "saleType": "auction",
        },
        "ArtworkNotFound": null,
        "ClientError": null,
        "UserArgumentsConflict": null,
        "UserUnauthorized": null,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query only fixed sales  1`] = `
Object {
  "data": Object {
    "listArtworks": Array [
      Object {
        "Artwork": Object {
          "handle": "5",
          "saleType": "fixed",
        },
        "ArtworkNotFound": null,
        "ClientError": null,
        "UserArgumentsConflict": null,
        "UserUnauthorized": null,
      },
      Object {
        "Artwork": Object {
          "handle": "4",
          "saleType": "fixed",
        },
        "ArtworkNotFound": null,
        "ClientError": null,
        "UserArgumentsConflict": null,
        "UserUnauthorized": null,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query only fixed sales that are listed  1`] = `
Object {
  "data": Object {
    "listArtworks": Array [
      Object {
        "Artwork": Object {
          "handle": "5",
          "saleType": "fixed",
        },
        "ArtworkNotFound": null,
        "ClientError": null,
        "UserArgumentsConflict": null,
        "UserUnauthorized": null,
      },
      Object {
        "Artwork": Object {
          "handle": "4",
          "saleType": "fixed",
        },
        "ArtworkNotFound": null,
        "ClientError": null,
        "UserArgumentsConflict": null,
        "UserUnauthorized": null,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
